--- a/InnoLightReport/InnoLightReport.csproj
+++ b/InnoLightReport/InnoLightReport.csproj
@@ -91,8 +91,26 @@
     <Compile Include="Methods\MssqlMethod.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\CurrentDayReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\CurrentDayReportUserControl.Designer.cs">
+      <DependentUpon>CurrentDayReportUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\CurrentHourReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\CurrentHourReportUserControl.Designer.cs">
+      <DependentUpon>CurrentHourReportUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Field4UserControl.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\KwDayReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\KwDayReportUserControl.Designer.cs">
+      <DependentUpon>KwDayReportUserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\KwhDayReportUserControl.cs">
       <SubType>UserControl</SubType>
@@ -112,6 +130,12 @@
     <Compile Include="Views\KwhHourReportXtraUserControl.Designer.cs">
       <DependentUpon>KwhHourReportXtraUserControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\KwHourReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\KwHourReportUserControl.Designer.cs">
+      <DependentUpon>KwHourReportUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SenserDayReportUserControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -123,6 +147,18 @@
     </Compile>
     <Compile Include="Views\SenserHourReportUserControl.Designer.cs">
       <DependentUpon>SenserHourReportUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\VoltageDayReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\VoltageDayReportUserControl.Designer.cs">
+      <DependentUpon>VoltageDayReportUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\VoltageHourReportUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Views\VoltageHourReportUserControl.Designer.cs">
+      <DependentUpon>VoltageHourReportUserControl.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -138,6 +174,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\CurrentDayReportUserControl.resx">
+      <DependentUpon>CurrentDayReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\CurrentHourReportUserControl.resx">
+      <DependentUpon>CurrentHourReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\KwDayReportUserControl.resx">
+      <DependentUpon>KwDayReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\KwhDayReportUserControl.resx">
       <DependentUpon>KwhDayReportUserControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,11 +192,20 @@
     <EmbeddedResource Include="Views\KwhHourReportXtraUserControl.resx">
       <DependentUpon>KwhHourReportXtraUserControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\KwHourReportUserControl.resx">
+      <DependentUpon>KwHourReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\SenserDayReportUserControl.resx">
       <DependentUpon>SenserDayReportUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\SenserHourReportUserControl.resx">
       <DependentUpon>SenserHourReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\VoltageDayReportUserControl.resx">
+      <DependentUpon>VoltageDayReportUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\VoltageHourReportUserControl.resx">
+      <DependentUpon>VoltageHourReportUserControl.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
